Add add table only for 16x16 tables

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,8 +1,17 @@
 .block {
-  background: red;
-  border: blue 1px solid;
+  padding: 5px;
+  border: black 1px solid;
+  width: 16px;
+  height: 16px;
 }
 
 .grid {
+  margin: auto;
+  width: 30%;
   display: grid;
+  grid-template-columns: repeat(16, 1fr);
+}
 
+.block:hover {
+  background-color: red;
+}
